Kubernetes/next-nest-k8s-app/k8s/postgres.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres
  labels:
    app: postgres
  spec:
    replicas: 1
    selector:
      matchLabels:
        app: postgres
    template:
      metadata:
        labels:
            app: postgres
      spec:
        containers:
          - name: postgres
            image: postgres:17
            ports:
              - containerPort: 5432
            volumeMounts:
              - name: postgres-data
                mountPath: /var/lib/postgresql/data
            resources:
              requests:
                memory: "128Mi"
                cpu: "100m"
              limits:
                memory: "256Mi"
                cpu: "200m"
        volumes:
          - name: postgres-data
            persistentVolumeClaim:
              claimName: postgres-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: postgres-service
  labels:
    app: postgres
spec:
  selector:
    app: postgres
  ports:
    - port: 5432
      targetPort: 5432
  type: ClusterIP
